--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
   <header>
-    <h1>🚀 Hello from Apache inside Docker</h1>
+    <h1>Hello from Apache inside Docker</h1>
     <p>Este repositório tem <strong>apenas dois arquivos</strong>: <code>docker-compose.yml</code> e <code>index.html</code>.</p>
   </header>
   <main>
